P10.9 backend: preserve JSON nulls and map upstream contract failures to 502